--- a/ProcesamientoDeImágenes/ProcesamientoDeImágenes/Camera.xaml
+++ b/ProcesamientoDeImágenes/ProcesamientoDeImágenes/Camera.xaml
@@ -114,14 +114,14 @@
 
                 <!-- Bottom section with buttons -->
                 <StackPanel VerticalAlignment="Bottom" Margin="10,10,10,10" Grid.Row="3">
-                    <Button Style="{StaticResource SidebarButtonStyle}">
+                    <Button Style="{StaticResource SidebarButtonStyle}" Click="SoftwareInfoClick">
                         <StackPanel Orientation="Horizontal">
                             <TextBlock FontSize="20" Foreground="White">ℹ️</TextBlock>
                             <TextBlock Text=" Software Info" FontSize="16" Foreground="White" Margin="10,0,0,0"/>
                         </StackPanel>
                     </Button>
 
-                    <Button Style="{StaticResource SidebarButtonStyle}">
+                    <Button Style="{StaticResource SidebarButtonStyle}" Click="UserManualClick">
                         <StackPanel Orientation="Horizontal">
                             <TextBlock FontSize="20" Foreground="White">📖</TextBlock>
                             <TextBlock Text=" User Manual" FontSize="16" Foreground="White" Margin="10,0,0,0"/>
@@ -211,18 +211,26 @@
             </Grid.ColumnDefinitions>
 
 
-   
+
             <!-- Flip Image Icon -->
-            <Image Source="/Assets/Icons/FlipIcon.png" Grid.ColumnSpan="1" Grid.RowSpan="1" Grid.Row="5" Grid.Column="4" Stretch="Fill"/>
+            <Button Click="OnFlipImageIconClick" Grid.Column="4" Grid.Row="5" Background="Transparent" BorderThickness="0">
+                <Image Source="/Assets/Icons/FlipIcon.png" Stretch="Fill"/>
+            </Button>
 
             <!-- Screen Shot Icon -->
-            <Image Source="/Assets/Icons/CameraIcon.png" Grid.ColumnSpan="1" Grid.RowSpan="1" Grid.Row="5" Grid.Column="34" Stretch="Fill"/>
+            <Button Click="OnScreenShotIconClick" Grid.Column="34" Grid.Row="5" Background="Transparent" BorderThickness="0">
+                <Image Source="/Assets/Icons/CameraIcon.png" Stretch="Fill"/>
+            </Button>
 
             <!-- Face Detect Icon -->
-            <Image Source="/Assets/Icons/FaceDetectIcon.png" Grid.ColumnSpan="1" Grid.RowSpan="1" Grid.Row="7" Grid.Column="34" Stretch="Fill"/>
-            
-            <!-- Selected Video Container -->
-            <Rectangle Grid.Column="6" Grid.ColumnSpan="27" Grid.RowSpan="17" Grid.Row="4" Fill="Red"/>
+            <Button Click="OnFaceDetectIconClick" Grid.Column="34" Grid.Row="7" Background="Transparent" BorderThickness="0">
+                <Image Source="/Assets/Icons/FaceDetectIcon.png" Stretch="Fill"/>
+            </Button>
+
+
+            <Border Grid.Column="6" Grid.ColumnSpan="27" Grid.RowSpan="17" Grid.Row="4" BorderBrush="Black" BorderThickness="2">
+                <Image Stretch="Fill"/>
+            </Border>
 
             <ComboBox x:Name="comboBox" Grid.Column="19"  Grid.Row="22" Grid.RowSpan="2" HorizontalAlignment="Center" Margin="0,0,0,30"/>
 
