--- a/ProcesamientoDeImágenes/ProcesamientoDeImágenes/Video.xaml
+++ b/ProcesamientoDeImágenes/ProcesamientoDeImágenes/Video.xaml
@@ -114,14 +114,14 @@
 
                 <!-- Bottom section with buttons -->
                 <StackPanel VerticalAlignment="Bottom" Margin="10,10,10,10" Grid.Row="3">
-                    <Button Style="{StaticResource SidebarButtonStyle}">
+                    <Button Style="{StaticResource SidebarButtonStyle}" Click="SoftwareInfoClick">
                         <StackPanel Orientation="Horizontal">
                             <TextBlock FontSize="20" Foreground="White">ℹ️</TextBlock>
                             <TextBlock Text=" Software Info" FontSize="16" Foreground="White" Margin="10,0,0,0"/>
                         </StackPanel>
                     </Button>
 
-                    <Button Style="{StaticResource SidebarButtonStyle}">
+                    <Button Style="{StaticResource SidebarButtonStyle}" Click="UserManualClick">
                         <StackPanel Orientation="Horizontal">
                             <TextBlock FontSize="20" Foreground="White">📖</TextBlock>
                             <TextBlock Text=" User Manual" FontSize="16" Foreground="White" Margin="10,0,0,0"/>
@@ -211,24 +211,41 @@
             </Grid.ColumnDefinitions>
 
             <!-- Selected Video Container -->
-            <Rectangle Grid.Column="2" Grid.ColumnSpan="27" Grid.RowSpan="17" Grid.Row="3" Fill="Red"/>
+            <Border Grid.Column="2" Grid.ColumnSpan="27" Grid.RowSpan="17" Grid.Row="3" BorderBrush="Black" BorderThickness="2">
+                <Image Stretch="Fill"/>
+            </Border>
 
             <!-- Upload Video Icon -->
-            <Image Source="/Assets/Icons/UploadImageIcon.png" Grid.ColumnSpan="1" Grid.RowSpan="1" Grid.Row="21" Grid.Column="3" Stretch="Fill"/>
+            <Button Click="OnUploadVideoIconClick" Grid.Column="3" Grid.Row="21" Background="Transparent" BorderThickness="0">
+                <Image Source="/Assets/Icons/UploadImageIcon.png" Stretch="Fill"/>
+            </Button>
 
             <!-- Download Video Icon -->
-            <Image Source="/Assets/Icons/DownloadImageIcon.png" Grid.ColumnSpan="1" Grid.RowSpan="1" Grid.Row="21" Grid.Column="27" Stretch="Fill"/>
+            <Button Click="OnDownloadVideoIconClick" Grid.Column="27" Grid.Row="21" Background="Transparent" BorderThickness="0">
+                <Image Source="/Assets/Icons/DownloadImageIcon.png" Stretch="Fill"/>
+            </Button>
+
 
             <ComboBox x:Name="comboBox" Grid.Column="15"  Grid.Row="21" Grid.RowSpan="2" HorizontalAlignment="Center" Margin="0,0,0,30"/>
 
             <!-- Histogram Red -->
-            <Rectangle Grid.Column="31" Grid.ColumnSpan="6" Grid.RowSpan="6" Grid.Row="2" Fill="Beige"/>
+            <Border Grid.Column="31" Grid.ColumnSpan="6" Grid.RowSpan="6" Grid.Row="2" 
+        BorderBrush="Beige" BorderThickness="2">
+                <Canvas Background="Transparent"/>
+            </Border>
 
             <!-- Histogram Green -->
-            <Rectangle Grid.Column="31" Grid.ColumnSpan="6" Grid.RowSpan="6" Grid.Row="9" Fill="Beige"/>
+            <Border Grid.Column="31" Grid.ColumnSpan="6" Grid.RowSpan="6" Grid.Row="9" 
+        BorderBrush="Beige" BorderThickness="2">
+                <Canvas Background="Transparent"/>
+            </Border>
 
             <!-- Histogram Blue -->
-            <Rectangle Grid.Column="31" Grid.ColumnSpan="6" Grid.RowSpan="6" Grid.Row="16" Fill="Beige"/>
+            <Border Grid.Column="31" Grid.ColumnSpan="6" Grid.RowSpan="6" Grid.Row="16" 
+        BorderBrush="Beige" BorderThickness="2">
+                <Canvas Background="Transparent"/>
+            </Border>
+
 
         </Grid>
 
