--- a/ProcesamientoDeImágenes/ProcesamientoDeImágenes/Video.xaml
+++ b/ProcesamientoDeImágenes/ProcesamientoDeImágenes/Video.xaml
@@ -226,7 +226,19 @@
             </Button>
 
 
-            <ComboBox x:Name="comboBox" Grid.Column="15"  Grid.Row="21" Grid.RowSpan="2" HorizontalAlignment="Center" Margin="0,0,0,30"/>
+            <ComboBox x:Name="comboBox" Grid.Column="15"  Grid.Row="21" Grid.RowSpan="2" HorizontalAlignment="Center" Margin="0,0,0,30" SelectedIndex="0" FontFamily="Arial Narrow">
+                <ComboBoxItem>None</ComboBoxItem>
+                <ComboBoxItem>Gaussian Blur</ComboBoxItem>
+                <ComboBoxItem>Contrast Filter</ComboBoxItem>
+                <ComboBoxItem>Sharpness Filter</ComboBoxItem>
+                <ComboBoxItem>Threshold Filter</ComboBoxItem>
+                <ComboBoxItem>Hue/Saturation Filter</ComboBoxItem>
+                <ComboBoxItem>Negative Filter</ComboBoxItem>
+                <ComboBoxItem>Vignette Filter</ComboBoxItem>
+                <ComboBoxItem>Mosaic Filter</ComboBoxItem>
+                <ComboBoxItem>Retro Effect</ComboBoxItem>
+                <ComboBoxItem>Warp Filter</ComboBoxItem>
+            </ComboBox>
 
             <!-- Histogram Red -->
             <Border Grid.Column="31" Grid.ColumnSpan="6" Grid.RowSpan="6" Grid.Row="2" 
